{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 102,
  "lineage": "64f14031-ba89-d501-1313-4ed1d551ddeb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0106b0cf111ccc7a6",
            "arn": "arn:aws:ec2:ap-south-1:209479265154:elastic-ip/eipalloc-0106b0cf111ccc7a6",
            "domain": "vpc",
            "id": "eipalloc-0106b0cf111ccc7a6",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-99-55.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.99.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web-server-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b52033d797da0c87",
            "arn": "arn:aws:ec2:ap-south-1:209479265154:instance/i-0b76459a1f8e7c376",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b76459a1f8e7c376",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_pvt_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b63729ac9ac9aac1",
            "private_dns": "ip-10-0-3-37.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.37",
            "public_ip": "3.110.217.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0a5b37e13e35b79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-075eb6cc47caee011",
              "sg-09c04a97b6c97a2ce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02625dd3859b2aca9",
            "tags": {
              "Name": "imazy-web-default"
            },
            "tags_all": {
              "Name": "imazy-web-default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075eb6cc47caee011",
              "sg-09c04a97b6c97a2ce"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_http_sg",
            "aws_security_group.my_ssh_sg",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.my_ami",
            "data.aws_availability_zones.my_available_zones",
            "tls_private_key.my_pvt_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:internet-gateway/igw-006c9ddb455605d12",
            "id": "igw-006c9ddb455605d12",
            "owner_id": "209479265154",
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_net_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0106b0cf111ccc7a6",
            "association_id": "eipassoc-00a478e55b99c387d",
            "connectivity_type": "public",
            "id": "nat-06e07aa5cf9970b2a",
            "network_interface_id": "eni-0acce57612d4bd3bd",
            "private_ip": "10.0.3.128",
            "public_ip": "3.109.99.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02625dd3859b2aca9"
          },
          "dependencies": [
            "aws_eip.my_public_eip",
            "aws_internet_gateway.my_internet_gtw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:route-table/rtb-029971768e8753715",
            "id": "rtb-029971768e8753715",
            "owner_id": "209479265154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006c9ddb455605d12",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:route-table/rtb-0811966cb1d82338d",
            "id": "rtb-0811966cb1d82338d",
            "owner_id": "209479265154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e07aa5cf9970b2a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_public_eip",
            "aws_internet_gateway.my_internet_gtw",
            "aws_nat_gateway.my_net_gtw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5beb06d5ddb1857",
            "route_table_id": "rtb-029971768e8753715",
            "subnet_id": "subnet-02625dd3859b2aca9"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_route_table.my_public_route",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        },
        {
          "index_key": "public-02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ccb34bf14bbdf3f",
            "route_table_id": "rtb-029971768e8753715",
            "subnet_id": "subnet-04db552acf6e7f6e8"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_route_table.my_public_route",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:security-group/sg-09c04a97b6c97a2ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c04a97b6c97a2ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250331215217514100000002",
            "name_prefix": "terraform-",
            "owner_id": "209479265154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:security-group/sg-075eb6cc47caee011",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075eb6cc47caee011",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250331215217513100000001",
            "name_prefix": "terraform-",
            "owner_id": "209479265154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-0413fa3bc827ee5f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0413fa3bc827ee5f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-02625dd3859b2aca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02625dd3859b2aca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imazy-public-01",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "imazy-public-01",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        },
        {
          "index_key": "public-02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-04db552acf6e7f6e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04db552acf6e7f6e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imazy-public-02",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "imazy-public-02",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c0f9dc47678f3bbf"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:vpc/vpc-0c0f9dc47678f3bbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030fc713c10e7613c",
            "default_route_table_id": "rtb-0ba13a266b9f2d9cb",
            "default_security_group_id": "sg-0a6315608f49706c4",
            "dhcp_options_id": "dopt-034dbb925f3864a42",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0f9dc47678f3bbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba13a266b9f2d9cb",
            "owner_id": "209479265154"
          }
        }
      ]
    }
  ]
}